# moos-mscl

./: .gitignore  CMakeLists.txt
src/: Microstrain.cpp  Microstrain.h  MicrostrainMoos.cpp  MicrostrainMoos.h  main.cpp  test.moos
